添加删除用户、重置用户密码相关逻辑
